[package]
name = "fightyboiscorpse"
version = "0.1.0"
authors = ["mattlangsenkamp <langsenkamp.4@osu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
postgres = "0.17.2"
serde = "1.0.106"
serde_json = "1.0.51"
serde_derive = "1.0.106"
rocket_contrib = "0.4.4"
